@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-03-31T01:14:20Z",
+  "timestamp" : "2022-04-01T08:21:37Z",
   "count_outdated" : 50,
   "uniques_outdated" : 40,
-  "count" : 83,
-  "uniques" : 57,
+  "count" : 85,
+  "uniques" : 58,
   "clones" : [
     {
       "timestamp": "2022-03-23T00:00:00Z",
@@ -25,6 +25,13 @@
       "count_minmax": [ 0, 9 ],
       "uniques": 4,
       "uniques_minmax": [ 0, 4 ]
+    },
+    {
+      "timestamp": "2022-04-01T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
