@@ -1,6 +1,6 @@
 {
-  "count": 33,
-  "uniques": 13,
+  "count": 35,
+  "uniques": 14,
   "clones": [
     {
       "timestamp": "2022-03-23T00:00:00Z",
@@ -16,6 +16,11 @@
       "timestamp": "2022-03-30T00:00:00Z",
       "count": 9,
       "uniques": 4
+    },
+    {
+      "timestamp": "2022-04-01T00:00:00Z",
+      "count": 2,
+      "uniques": 1
     }
   ]
 }
