@@ -1,3 +1,9 @@
+2022-04-01T08:21:37Z:
+* notice: last 14d: all unq: 35 14
+* notice: prev accum: outdated-all outdated-unq / all unq: 50 40 / 83 57
+* notice: next accum: outdated-all outdated-unq / all unq: 50 40 / 85 58
+* notice: prev json diff // prev day diff: unq all: +1 +2 / -0 -0 // +1 +2 / -0 -0
+
 2022-03-31T01:14:20Z:
 * notice: last 14d: all unq: 33 13
 * notice: prev accum: outdated-all outdated-unq / all unq: 50 40 / 75 54
